chore: improve AddExportsRule